--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # VUE_APP_API_URL=https://api-dev-lms.digitefa.id/api
+# VUE_APP_BACKEND_URL=https://api-dev-lms.digitefa.id
 
 VUE_APP_API_URL=http://localhost:8000/api
 # VUE_APP_BACKEND_URL=http://localhost:8000
