--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@phosphor-icons/vue": "^2.2.1",
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
